<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_p_gazebo</name>
  <version>1.0.0</version>
  <description>
    Package for OpenMANIPULATOR-P Gazebo
  </description>
  <license>Apache 2.0</license>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_p_gazebo</url>
  <url type="emanual">https://emanual.robotis.com/docs/en/platform/openmanipulator_p/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_p_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_p_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>controller_manager</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
